# spacebattleship

./: .gitignore  Cargo.toml  README.md
battleship/: Cargo.toml
battleship/src/: main.rs
spacebattleship/: Cargo.toml
spacebattleship/src/: board.rs  game.rs  lib.rs  ships.rs
spacebattleship/src/board/: common.rs  dimensions.rs  errors.rs  grid.rs  mod.rs  rectangular.rs  setup.rs
spacebattleship/src/board/common/: coordinate2d.rs  mod.rs
spacebattleship/src/board/rectangular/: mod.rs
spacebattleship/src/game/: mod.rs  simple.rs  uniform.rs
spacebattleship/src/game/uniform/: errors.rs
spacebattleship/src/ships/: linear.rs
