[package]
name = "battleship"
version = "0.1.0"
authors = ["Zachary Stewart <zachary@zstewart.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spacebattleship = { path = "../spacebattleship", features = ["rng_gen"] }
clap = "^2.33"
rand = "^0.7.3"
regex = "^1"
once_cell = "^1.4"