[package]
name = "spacebattleship"
version = "0.1.0"
authors = ["Zachary Stewart <zachary@zstewart.com>"]
edition = "2018"

[features]
rng_gen = ["rand", "once_cell"]

[dependencies]
enumflags2 = "^0.6"
thiserror = "^1.0"
rand = { version = "^0.7.3", optional = true }
once_cell = { version = "^1.4", optional = true }
