# Copyright 2020 Zachary Stewart
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "spacebattleship"
version = "0.1.0"
authors = ["Zachary Stewart <zachary@zstewart.com>"]
edition = "2018"

description = "Implementation of the classic game Battleship with support for arbitrary dimensions and spaces through generics."
documentation = "https://docs.rs/spacebattleship"
homepage = "https://github.com/zstewar1/spacebattleship"
readme = "../README.md"
repository = "https://github.com/zstewar1/spacebattleship"
license = "Apache-2.0"
keywords = ["battleship"]

[features]
rng_gen = ["rand", "once_cell"]

[dependencies]
enumflags2 = "^0.6"
thiserror = "^1.0"
rand = { version = "^0.7.3", optional = true }
once_cell = { version = "^1.4", optional = true }
